--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ defaults:
     values:
       fluid: false
       navbar: bottom
-      theme: any-theme
+      # theme: basic_light_sans
+
+# theme: basic_light_sans
 
 emptyArray: []
