Optimizations, go with Shire

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ defaults:
     values:
       fluid: false
       navbar: bottom
-      theme: dnd
+      # theme: dnd
+      # font_face: fonts/scala/fonts.css
 
 emptyArray: []
 
